# claude-code-queue

./: .gitignore  CLAUDE.md  JJ_INTEGRATION_IMPLEMENTATION.md  QUICK_TEST.md  README.md  SHELL_HELPERS.md  TESTING.md  claude_queue.py  flake.nix  pyproject.toml  pytest.ini  run_tests.sh  shell-helpers.bash  shell-helpers.fish  shell-helpers.zsh  test_jj_integration.py  test_script.py
.claude/: settings.json  settings.local.json
completions/: _claude-queue
nix/: tests.nix  treefmt.nix
src/: __init__.py  claude_interface.py  models.py  queue_manager.py  storage.py
src/claude_code_queue/: claude_interface.py  cli.py  jj_integration.py  models.py  queue_manager.py  storage.py
tests/: README.md  __init__.py  conftest.py  test_claude_interface.py  test_cli.py  test_models.py  test_queue_manager.py  test_storage.py
