[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-queue"
version = "0.2.0"
description = "Queue Claude Code prompts and execute them when token limits reset."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Ingolf Wagner", email="contact@ingolf-wagner.de" }
]
dependencies = [
  # Add your dependencies here
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_code_queue*"]

[project.scripts]
claude-queue = "claude_code_queue.cli:main"
